--- a/ComicDownloader/Properties/Resources.resx
+++ b/ComicDownloader/Properties/Resources.resx
@@ -139,11 +139,17 @@
   <data name="1363852385_info" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\1363852385_info.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="1364131990_document_add" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\1364131990_document_add.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="1364150669_folder_add" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\1364150669_folder_add.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="1363960953_adept_update" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\1363960953_adept_update.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
-  <data name="1364131990_document_add" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\1364131990_document_add.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="1364155386_gtk-refresh" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\1364155386_gtk-refresh.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
