--- a/ComicDownloader/Properties/Resources.resx
+++ b/ComicDownloader/Properties/Resources.resx
@@ -148,8 +148,10 @@
   <data name="1363960953_adept_update" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\1363960953_adept_update.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
   <data name="1364155386_gtk-refresh" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\1364155386_gtk-refresh.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="SecureKey" xml:space="preserve">
+    <value>0904199253TRUONG</value>
   </data>
 </root>
