--- a/ComicDownloader/Forms/LastestChapterUpdateForm.resx
+++ b/ComicDownloader/Forms/LastestChapterUpdateForm.resx
@@ -123,7 +123,10 @@
   <metadata name="statusStrip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>395, 11</value>
   </metadata>
+  <metadata name="statusStrip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>395, 11</value>
+  </metadata>
   <metadata name="hyperlinkStyle1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-    <value>268, 11</value>
+    <value>218, -5</value>
   </metadata>
 </root>
